--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -216,6 +216,7 @@ html {
               ul{
                 li{
                   margin-bottom: 0px;
+                  min-width: 150px;
                 }
               }
             }
@@ -355,6 +356,19 @@ html {
   .main .projects .projectBg .projectLinks .codeBtn {
     margin-left: 0%;
     min-width: 80%;
+  }
+  .main .projects .projectBg .project h5 {
+    margin-left: 5%;
+    float: left;
+  }
+  .hidden {
+    display: none;
+  }
+  .main .projects .projectBg .project .techUsed .lists {
+    margin-bottom: 15px;
+  }
+  .main .projects .projectBg .project .techUsed .lists ul {
+    margin-bottom: 0px;
   }
 }
 
